[package]
name = "broker-alpaca"
version = "0.1.0"
edition = "2021"
description = "Alpaca Markets broker plugin for KL Investment"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plugin_api = { path = "../../crates/plugin_api" }
models = { path = "../../crates/models" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8"
